# vin-decoder

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  fElementAttributeValue.txt  fVinDescriptor.txt  fVinWMI.txt  postgresql.conf  spVinDecode.txt  spVinDecode_Core.txt
.sqlx/: query-084207c56fab12075d649fcc3e5d584c27a346a2d6730d1c30e7abe9ba50e9ba.json  query-0dbcf88ddb007ab139cd0de80ba267190f99650648b814180a9c4730f326031a.json  query-20a6d2b8f2c0bc2c981b2ddae57cf82ac86c7963aff26b08716c9157e9d4b058.json  query-3ec724c6e0e15fa772de6fa7cadbab181929236c9bc660e0626c3d97c7dc8295.json  query-456efc63a3f712049e3da7dd6eba3a8cca093723989d5bfbea6778f86d4e548c.json  query-4d04503fa64b5cecd67b8b1f927aa045f5bcfa3edf84fb607b018a9e3b734843.json  query-52c195757b53139f90710868c94c16c08fc4a73f069929365a3ce8374c868ec5.json  query-548c22197d08763d4aa79e2b9fd97290806e0c54c7ce37de5fa4ea8ec83c9324.json  query-551a4034f33ce318bc644a29e35a4279cb8d2a7cf6421586459f47a42be064f9.json  query-5c31a1b21fccd57500dda3ab73af8345f28b21f53ba607558e562c47319b8588.json  query-68d93826dae75d8a18181b54886695bfb939fb8a4f36b57919a47d4d4455714b.json  query-6ab822c2de6009b8bfbc35f5918be342ef8b6646399fb7054e91d875042e4a3d.json  query-6f5992cd322213cd417606326ed373628591ab0349c5e6376981da91e5ca7fa8.json  query-7c7e280558976c7bc6239b0cd7539688d78f62748e6fbb6d40e85eacd7967710.json  query-87fa4c9ee36fb5898dbd845a6c78b33f6b3e970baa56370fe0ad4d522a55c8c8.json  query-c5631ca5e7a9d0ba9fb4cdf3d9b1017f7da5a8c7b592499e53acbfea1ad5925b.json  (+2 more)
nhtsa_files/: fVinModelYear2.txt  spVinDecode_ErrorCode.txt
(+11 files in other folders)
