[package]
name = "vin-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bb8 = "0.8.3"
bb8-tiberius = { version = "0.15.0", features = ["with-tokio"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.5.0"
odbc = "0.17.0"
odbc-safe = "0.6.0"
optfield = "0.3.0"
polars = { version = "0.38.3", features = ["nightly"] }
regex = "1.10.5"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono"] }
tiberius = { version = "0.12.2", features = ["all", "tokio", "tokio-rustls", "tokio-util"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
