[package]
name = "vin-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.5.0"
optfield = "0.3.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
